2012-02-07 arnaud.fontaine
* Use resetOnceAtTransactionBoundary when a Component has been modified.

2012-02-02 arnaud.fontaine
* Perform revalidate automatically rather than requiring a manual action.

2012-02-01 arnaud.fontaine
* Replace comments by description field in Component_view.

2012-01-27 arnaud.fontaine
* For Component_view, add version, comments and validation state fields, and move editor field to the bottom to have more room for editing.

2012-01-27 arnaud.fontaine
* Use Ace editor to edit source code.

2012-01-27 arnaud.fontaine
* Add component_validation_workflow which supports revalidation.

2012-01-25 arnaud.fontaine
* Add missing skin folder.

2012-01-24 arnaud.fontaine
* Use DocumentComponent document class for Document Component Portal Type.

2012-01-23 arnaud.fontaine
* Rename DocumentComponent to Component.

2012-01-19 arnaud.fontaine
* Extension Component has now its own class (meaningful for importing from filesystem).

2012-01-18 arnaud.fontaine
* Complete ComponentTool view.
* Implement Extension Component.
* Complete ExtensionComponent view.
* Add component_interaction_workflow to reset erp5.component when modifying the source code of an Extension Component.

2012-12-20 arnaud.fontaine
* Add initial ZODB component prototype.

2011-10-25 yusei
* Fix Base_resetListSetting. It did not work with "Set List Setting" dialog. Now it accepts any parameters.

2011-06-23 yusei
* Add an action to call alarm.activeSense() for developer.

2011-06-07 yusei
* Set auditor proxy role to Base_getConversionFormatItemList. Anybody should be able to view conversion format list.

Fix CategoryTool_constructCategoryTableToExport. Sometimes categories were wrongly sorted and incorrect category definitions were exported.

2011-02-25 arnaud.fontaine
* Proxify all the fields in BaseType_view and PreferenceType_view.
* Fix type_interface_list which was not displayed properly in BaseType_view and PreferenceType_view.

2011-02-24 arnaud.fontaine